--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="style/all.css">
 </head>
-<body>
+<body class="layout">
     <header class="navbar container">
         <div class="navbar-menu">
             <a class="navbar-logo" href="#"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week1/logo.svg" alt=""></a>
@@ -19,8 +19,22 @@
                 <a href="#">品牌故事</a>
             </nav>
         </div>
-        <div class="bt-wrapper"><button class="navbar-user"><i class="bi bi-person"></i></button></div>
+        <div class="navbar-bt-wrapper"><button class="navbar-user"><i class="bi bi-person"></i></button></div>
     </header>
-    
+    <main>
+
+    </main>
+    <footer class="footer container">
+        <div class="footer-logo-link">
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week1/logo.svg" alt="">
+            <nav class="footer-list">
+                <a href="#">商品列表</a>
+                <a href="#">品牌故事</a>
+            </nav>
+        </div>
+        <div class="footer-copyright">
+            Copyright © 2025 URBNSTYLE<br> All Rights Reserved.
+        </div>
+    </footer>
 </body>
 </html>
