feat: add _bt.scss for buttons

--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>首頁</title>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="style/all.css">
 </head>
-<body>
-    
+<body class="layout">
+    <header class="navbar container">
+        <div class="navbar-menu">
+            <a class="navbar-logo" href="#"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week1/logo.svg" alt=""></a>
+            <nav class="navbar-list">
+                <a href="#">商品列表</a>
+                <a href="#">品牌故事</a>
+            </nav>
+        </div>
+        <div class="navbar-bt-wrapper"><button class="navbar-user"><i class="bi bi-person"></i></button></div>
+    </header>
+    <main>
+
+    </main>
+    <footer class="footer container">
+        <div class="footer-logo-link">
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week1/logo.svg" alt="">
+            <nav class="footer-list">
+                <a href="#">商品列表</a>
+                <a href="#">品牌故事</a>
+            </nav>
+        </div>
+        <div class="footer-copyright">
+            Copyright © 2025 URBNSTYLE<br> All Rights Reserved.
+        </div>
+    </footer>
 </body>
 </html>
