--- a/test.html
+++ b/test.html
@@ -22,6 +22,7 @@
         <div class="navbar-bt-wrapper"><button class="navbar-user"><i class="bi bi-person"></i></button></div>
     </header>
     <main>
+        <button class="bt-p-tx">立即選購</button>
 
     </main>
     <footer class="footer container">
