feat: add new-arrival in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
                 <button class="bt-p-tx">立即選購</button>
             </div>
         </section>
-        <section class="new-arrival"></section>
+        <section class="new-arrival">
+            <div class="container">
+                <header>
+                    <div class="title">New Arrival</div>
+                    <h2>新品上市</h2>
+                </header>
+                <div class="row">
+                    <div class="col-6"></div>
+                    <div class="col-6"></div>
+                    <div class="col-6"></div>
+                    <div class="col-6"></div>
+                </div>
+            </div>
+        </section>
         <section class="best-sellers"></section>
         <section class="collab-banner"></section>
         <section class="categories"></section>
