feat: add _card.scss

--- a/test.html
+++ b/test.html
@@ -22,7 +22,46 @@
         <div class="navbar-bt-wrapper"><button class="navbar-user"><i class="bi bi-person"></i></button></div>
     </header>
     <main>
-        <button class="bt-p-tx">立即選購</button>
+        <section class="hero">
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/banner.png" alt="主視覺">
+            <div class="hero-content">
+                <h1>URBNSTEP</h1>
+                <h3>Your Step, Your Statement</h3>
+                <button class="bt-p-tx">立即選購</button>
+            </div>
+        </section>
+        <section class="new-arrival">
+            <p>123</p>
+            <div class="container">
+                <header>
+                    <div class="title">New Arrival</div>
+                    <h2>新品上市</h2>
+                </header>
+                <div class="row">
+                    <div class="col-6 card-product-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-1.png" alt="新品1">
+                            <div class="product-label">
+                                <h3 class="product-name">SUGAR SNAP</h3>
+                                <p class="product-price">NT $2,600</p>
+                            </div>
+                    </div>
+                    <div class="col-6 card-img-l"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-1.png" alt="新品1">
+                        <span class="img-label">123</span>
+                    </div>
+                    <div class="col-6 card-category-l"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-1.png" alt="新品1">
+                        <div class="category-label">
+                            <h3 class="category-label-en">URBN RUNNER</h3>
+                            <p class="category-label-tw">慢跑系列</p>
+                        </div>
+                    </div>
+                    <div class="col-6 card-product-l"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-1.png" alt="新品1"></div>
+                </div>
+            </div>
+        </section>
+        <section class="best-sellers"></section>
+        <section class="collab-banner"></section>
+        <section class="categories"></section>
+        <section class="lookbook"></section>
 
     </main>
     <footer class="footer container">
