feat: update new-arrival, add best-seller

--- a/index.html
+++ b/index.html
@@ -37,14 +37,62 @@
                     <h2>新品上市</h2>
                 </header>
                 <div class="row">
-                    <div class="col-6"></div>
-                    <div class="col-6"></div>
-                    <div class="col-6"></div>
-                    <div class="col-6"></div>
+                    <div class="col-6 new-1 card-product-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-1.png" alt="新品圖片1">
+                            <div class="product-label">
+                                <h3 class="product-name">Monoverse</h3>
+                                <p class="product-price">NT $3,600</p>
+                            </div>
+                    </div>
+                    <div class="col-6 new-2 card-product-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-2.png" alt="新品圖片2">
+                            <div class="product-label">
+                                <h3 class="product-name">PLATFORM404</h3>
+                                <p class="product-price">NT $2,600</p>
+                            </div>
+                    </div>
+                    <div class="col-6 new-3 card-product-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-3.png" alt="新品圖片3">
+                            <div class="product-label">
+                                <h3 class="product-name">URBN Force</h3>
+                                <p class="product-price">NT $3,200</p>
+                            </div>
+                    </div>
+                    <div class="col-6 new-4 card-product-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-4.png" alt="新品圖片4">
+                            <div class="product-label">
+                                <h3 class="product-name">Mode90</h3>
+                                <p class="product-price">NT $4,000</p>
+                            </div>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="best-sellers"></section>
+        <section class="best-seller">
+            <div class="container">
+                <header>
+                    <h2>熱銷補貨</h2>
+                </header>
+                <div class="row">
+                    <div class="col-3 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product-3.png" alt="熱銷圖片1">
+                        <span class="img-label">人氣 No.1</span>
+                    </div>
+                    <div class="col-3 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product.png" alt="熱銷圖片1">
+                        <span class="img-label">人氣 No.2</span>
+                    </div>
+                    <div class="col-3 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product-6.png" alt="熱銷圖片1">
+                        <span class="img-label">人氣 No.3</span>
+                    </div>
+                    <div class="col-3 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product-4.png" alt="熱銷圖片1">
+                        <span class="img-label">人氣 No.4</span>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="collab-banner"></section>
         <section class="categories"></section>
         <section class="lookbook"></section>
