feat: add collab banner

--- a/index.html
+++ b/index.html
@@ -93,7 +93,26 @@
                 </div>
             </div>
         </section>
-        <section class="collab-banner"></section>
+        <section class="collab-banner">
+            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/banner-co-branded.png" alt="聯名主視覺">
+            <img class="deco deco-star" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/2bf9ce835c6465f064ead0300f32c1e27f630580/2025-week3-4/star.svg" alt="" aria-hidden="true">
+            <img class="deco deco-sparkle" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/2bf9ce835c6465f064ead0300f32c1e27f630580/2025-week3-4/sparkle.svg" alt="" aria-hidden="true">
+            <div class="collab-content">
+                <div class="collab-text">
+                    <header>
+                        <div class="title">
+                            <h2>URBNSTEP</h2>
+                            <div class="x">x</div>
+                            <h2>Kevin Chen</h2>
+                        </div>
+                        <h3>跨界聯名，限量發售</h3>
+                    </header>
+                    
+                    <p>新銳漫畫家 Kevin Chen 親自操刀設計，街頭能量全面引爆！</p>
+                </div>
+                <button class="bt-p-tx">立即搶購</button>
+            </div>
+        </section>
         <section class="categories"></section>
         <section class="lookbook"></section>
 
