feat: add categories

--- a/index.html
+++ b/index.html
@@ -113,7 +113,43 @@
                 <button class="bt-p-tx">立即搶購</button>
             </div>
         </section>
-        <section class="categories"></section>
+        <section class="categories">
+            <div class="container">
+                <header>
+                    <h2>依系列選購</h2>
+                </header>
+                <div class="row">
+                    <div class="col-3 card-category-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product-6.png" alt="熱銷圖片1">
+                        <div class="category-label">
+                            <span class="category-label-en">URBN RUNNER</span>
+                            <span class="category-label-tw">慢跑系列</span>
+                        </div>
+                    </div>
+                    <div class="col-3 card-category-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/product-11.png" alt="熱銷圖片1">
+                        <div class="category-label">
+                            <span class="category-label-en">STREETMODE</span>
+                            <span class="category-label-tw">滑板系列</span>
+                        </div>
+                    </div>
+                    <div class="col-3 card-category-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product-9.png" alt="熱銷圖片1">
+                        <div class="category-label">
+                            <span class="category-label-en">CHUNK DISTRICT</span>
+                            <span class="category-label-tw">厚底系列</span>
+                        </div>
+                    </div>
+                    <div class="col-3 card-category-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/product-10.png" alt="熱銷圖片1">
+                        <div class="category-label">
+                            <span class="category-label-en">COLLAB ZONE</span>
+                            <span class="category-label-tw">聯名企劃</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="lookbook"></section>
 
     </main>
