feat: add inspirations, sign-up-bars, finish index

--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                         <span class="img-label">人氣 No.1</span>
                     </div>
                     <div class="col-3 card-img-l">
-                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product.png" alt="熱銷圖片1">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product.png" alt="熱銷圖片2">
                         <span class="img-label">人氣 No.2</span>
                     </div>
                     <div class="col-3 card-img-l">
-                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product-6.png" alt="熱銷圖片1">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product-6.png" alt="熱銷圖片3">
                         <span class="img-label">人氣 No.3</span>
                     </div>
                     <div class="col-3 card-img-l">
-                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product-4.png" alt="熱銷圖片1">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week2/product-4.png" alt="熱銷圖片4">
                         <span class="img-label">人氣 No.4</span>
                     </div>
                 </div>
@@ -150,7 +150,60 @@
                 </div>
             </div>
         </section>
-        <section class="lookbook"></section>
+        <section class="inspirations">
+            <div class="container">
+                <header>
+                    <h2>穿搭靈感</h2>
+                </header>
+                <div class="row">
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-1.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-2.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-4.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-5.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-4 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-10.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-4 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-3.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-6.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-7.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-8.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-9.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-11.png" alt="熱銷圖片1">
+                    </div>
+                    <div class="col-2 card-img-l">
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-12.png" alt="熱銷圖片1">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="sign-up-bar">
+            <div class="container">
+                <div class="sign-up-content">
+                    <h4>加入會員取得９折優惠</h4>
+                </div>
+                <button class="bt-n-tx">馬上註冊</button>
+
+            </div>
+        </section>
 
     </main>
     <footer class="footer container">
